syntax = "proto3";
package connect.marketmap.v2;

import "connect/marketmap/v2/market.proto";

option go_package = "github.com/skip-mev/connect/v2/x/marketmap/types";

// GenesisState defines the x/marketmap module's genesis state.
message GenesisState {
  // MarketMap defines the global set of market configurations for all providers
  // and markets.
  MarketMap market_map = 1;

  // LastUpdated is the last block height that the market map was updated.
  // This field can be used as an optimization for clients checking if there
  // is a new update to the map.
  uint64 last_updated = 2;
}
